# diffy

./: .git-blame-ignore-revs  Cargo.toml  README.md
.github/workflows/: ci.yml  replay-full.yml  replay.yml
examples/: multi_file_patch.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: patches_binary.rs  patches_parse_gitdiff.rs  patches_parse_unidiff.rs
src/: apply.rs  binary.rs  diff.rs  lib.rs  merge.rs  patch.rs  patches.rs  patchset.rs  range.rs  utils.rs
src/binary/: base85.rs  error.rs
src/diff/: cleanup.rs  myers.rs  tests.rs
src/patch/: error.rs  format.rs  mod.rs  parse.rs  style.rs
src/patches/: error.rs  parse.rs  tests.rs
src/patchset/: mod.rs  parse.rs  tests.rs
tests/: git_history_replay.rs  replay.rs
tests/compat/: common.rs  git.rs  gnu_patch.rs  main.rs
tests/compat/git/binary_and_text_mixed/in/: foo.patch
