[package]
name = "diffy"
version = "0.5.0"
authors = ["Brandon Williams <bwilliams.eng@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tools for finding and manipulating differences between files"
documentation = "https://docs.rs/diffy"
repository = "https://github.com/bmwill/diffy"
readme = "README.md"
keywords = ["diff", "patch", "merge"]
categories = ["text-processing"]
rust-version = "1.75.0"
edition = "2021"

[features]
binary = ["dep:flate2"]
color = ["dep:anstyle"]

[dependencies]
anstyle = { version = "1.0.13", optional = true }
flate2 = { version = "1.1.8", optional = true, default-features = false, features = ["zlib-rs"] }

[[example]]
name = "multi_file_patch"
required-features = ["binary"]

[[example]]
name = "patch_formatter"
required-features = ["color"]

[[test]]
name = "compat"
required-features = ["binary"]

[[test]]
name = "replay"
test = false
required-features = ["binary"]

[dev-dependencies]
rayon = "1.10"
snapbox = { version = "0.6.24", features = ["dir"] }

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
mod_module_files = "deny"
