[package]
name = "diffy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.diffy]
path = ".."
features = ["binary"]

[[bin]]
name = "patch_from_str"
path = "fuzz_targets/patch_from_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "patch_from_bytes"
path = "fuzz_targets/patch_from_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "patches_parse_gitdiff"
path = "fuzz_targets/patches_parse_gitdiff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "patches_parse_unidiff"
path = "fuzz_targets/patches_parse_unidiff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "patches_binary"
path = "fuzz_targets/patches_binary.rs"
test = false
doc = false
bench = false
